--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,12 @@ project(Cross_Process_Hook)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Cross_Process_Hook main.cpp include/PreProcess.h include/ShellCodeMaker.h include/Cross_Process_Hook.h include/Data_Struct.h)
+add_executable(Cross_Process_Hook
+        sample.cpp
+        include/PreProcess.h
+        include/PreProcess.cpp
+        include/ShellCodeMaker.h
+        include/Cross_Process_Hook.h
+        include/Cross_Process_Hook.cpp
+        include/Data_Struct.h include/ShellCodeMaker.cpp)
 
