add Socket method to transmission data(have not finish)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(Cross_Process_Hook
         sample.cpp
         include/ShellCodeMaker.h
+        include/ShellCodeMaker.cpp
         include/Cross_Process_Hook.h
         include/Cross_Process_Hook.cpp
-        include/Data_Struct.h include/ShellCodeMaker.cpp)
+        include/Data_Struct.h include/PreProcess.h)
 
