--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,6 @@ add_executable(Cross_Process_Hook
         include/ShellCodeMaker.cpp
         include/Cross_Process_Hook.h
         include/Cross_Process_Hook.cpp
-        include/Data_Struct.h include/PreProcess.h)
+        include/Data_Struct.h
+        include/Data_Struct.cpp)
 
