--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ project(Cross_Process_Hook)
 
 set(CMAKE_CXX_STANDARD 17)
 
+
+find_package(fmt CONFIG REQUIRED)
+
 add_executable(Cross_Process_Hook
         sample.cpp
         include/ShellCodeMaker.h
@@ -10,5 +13,11 @@ add_executable(Cross_Process_Hook
         include/Cross_Process_Hook.h
         include/Cross_Process_Hook.cpp
         include/Data_Struct.h
-        include/Data_Struct.cpp)
+        include/Data_Struct.cpp
+        include/DllFunctionRVAReader.cpp
+        include/DllFunctionRVAReader.h
+        Utils/Utils.cpp
+        Utils/Utils.h
+)
 
+target_link_libraries(Cross_Process_Hook fmt::fmt)
